--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
-version: '3.6'
+version: "3.6"
 
 services:
-  llama-gpt-api:
+  dalai-chat-hub-api:
+    # image: 'ghcr.io/dhruv-bvpdev/dalai-chat-hub-api-llama-2-7b-chat:latest'
     build:
       context: ./api
       dockerfile: Dockerfile
     environment:
-      MODEL: '/models/llama-2-7b-chat.bin'
+      MODEL: "/models/llama-2-7b-chat.bin"
 
-  llama-gpt-ui:
+  dalai-chat-hub-ui:
+    # image: 'ghcr.io/dhruv-bvpdev/dalai-chat-hub-ui:latest'
     build:
       context: ./ui
       dockerfile: Dockerfile
     ports:
       - 3000:3000
     environment:
-      - 'OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXX'
-      - 'OPENAI_API_HOST=http://llama-gpt-api:8000'
-      - 'DEFAULT_MODEL=/models/llama-2-7b-chat.bin'
+      - "OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXX"
+      - "OPENAI_API_HOST=http://llama-gpt-api:8000"
+      - "DEFAULT_MODEL=/models/llama-2-7b-chat.bin"
+      - "WAIT_HOSTS=llama-gpt-api:8000"
