--- a/docker-compose-13b.yml
+++ b/docker-compose-13b.yml
@@ -2,7 +2,10 @@ version: "3.6"
 
 services:
   dalai-chat-hub-api:
-    image: "ghcr.io/dhruv-bvpdev/dalai-chat-hub-api-llama-2-13b-chat:latest"
+    # image: "ghcr.io/dhruv-bvpdev/dalai-chat-hub-api-llama-2-13b-chat:latest"
+    build:
+      context: ./api
+      dockerfile: 13B.Dockerfile
     environment:
       MODEL: "/models/llama-2-13b-chat.bin"
 
@@ -15,3 +18,4 @@ services:
       - "OPENAI_API_HOST=http://llama-gpt-api:8000"
       - "DEFAULT_MODEL=/models/llama-2-13b-chat.bin"
       - "WAIT_HOSTS=llama-gpt-api:8000"
+      - "WAIT_TIMEOUT=600"
