--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,12 @@ version: "3.6"
 
 services:
   dalai-chat-hub-api:
-    # image: 'ghcr.io/dhruv-bvpdev/dalai-chat-hub-api-llama-2-7b-chat:latest'
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+    image: "ghcr.io/dhruv-bvpdev/dalai-chat-hub-api-llama-2-7b-chat:latest"
     environment:
       MODEL: "/models/llama-2-7b-chat.bin"
 
   dalai-chat-hub-ui:
-    # image: 'ghcr.io/dhruv-bvpdev/dalai-chat-hub-ui:latest'
-    build:
-      context: ./ui
-      dockerfile: Dockerfile
+    image: "ghcr.io/dhruv-bvpdev/dalai-chat-hub-ui:latest"
     ports:
       - 3000:3000
     environment:
@@ -21,3 +15,4 @@ services:
       - "OPENAI_API_HOST=http://llama-gpt-api:8000"
       - "DEFAULT_MODEL=/models/llama-2-7b-chat.bin"
       - "WAIT_HOSTS=llama-gpt-api:8000"
+      - "WAIT_TIMEOUT=600"
