--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: "3.6"
 
 services:
   dalai-chat-hub-api-7b:
-    # image: ghcr.io/dhruv-bvpdev/dalai-chat-hub-api
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+    image: ghcr.io/abetlen/llama-cpp-python:latest
     restart: on-failure
+    volumes:
+      - "./models:/models"
+      - "./api:/api"
     environment:
       MODEL: "/models/llama-2-7b-chat.bin"
+      MODEL_DOWNLOAD_URL: "https://huggingface.co/TheBloke/Nous-Hermes-Llama-2-7B-GGML/resolve/main/nous-hermes-llama-2-7b.ggmlv3.q4_0.bin"
+    command: "/bin/sh /api/run.sh"
 
   dalai-chat-hub-ui:
     image: ghcr.io/dhruv-bvpdev/dalai-chat-hub-ui:latest
