--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         service:
-          - api
+          # - api
           - ui
     env:
       SERVICE_DIR: ./${{ matrix.service }}
